# mbongo-chain

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PAYMENTS_TRACKER.md  README.md  tmp_clippy.txt  tmp_crypto_rs.txt  tmp_merkle_fail.txt  typos.toml
.claude/: settings.local.json
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/.github/.github/.github/.github/ISSUE_TEMPLATE/.github/ISSUE_TEMPLATE/.github/workflows/: rust-ci.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: auto-assign.yml  check-spelling.yml  ci.yml  clippy.yml  rust-ci.yml
crates/: README.md
crates/mbongo-api/: Cargo.toml
crates/mbongo-api/src/: lib.rs  rest.rs
crates/mbongo-api/tests/: rest_tests.rs
crates/mbongo-compute/: Cargo.toml
crates/mbongo-compute/src/: lib.rs
crates/mbongo-consensus/: Cargo.toml
crates/mbongo-consensus/src/: lib.rs
crates/mbongo-core/: Cargo.toml
crates/mbongo-core/benches/: state_trie_bench.rs
crates/mbongo-core/src/: account.rs  crypto.rs  lib.rs  primitives.rs
crates/mbongo-core/src/storage/: mod.rs  trie.rs
crates/mbongo-core/tests/: prop.rs  state_trie_tests.rs
crates/mbongo-network/: Cargo.toml
crates/mbongo-network/src/: lib.rs  p2p.rs  p2p_protocol.rs  rpc.rs  server.rs
crates/mbongo-network/tests/: jsonrpc_tests.rs
crates/mbongo-node/: Cargo.toml
crates/mbongo-node/src/: backend.rs  main.rs  mempool.rs  sync_service.rs
crates/mbongo-node/tests/: deterministic_replay.rs  devnet_convergence.rs
crates/mbongo-runtime/: Cargo.toml
crates/mbongo-runtime/src/: lib.rs
crates/mbongo-storage/: Cargo.toml
crates/mbongo-storage/src/: lib.rs  memory.rs  rocksdb.rs  storage.rs
crates/mbongo-verification/: Cargo.toml
crates/mbongo-verification/src/: lib.rs
crates/mbongo-wallet/: Cargo.toml
crates/mbongo-wallet/examples/: sign_tx.rs
crates/mbongo-wallet/src/: lib.rs
data/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
docs/: ALIGNMENT_AUDIT_2026-02.md  ARCHITECTURE_GUARDRAILS.md  ARCHITECTURE_OVERVIEW_FOR_NEW_DEVS.md  BOUNTY_AUDIT_REPORT.md  BOUNTY_LEDGER_PUBLIC.md  CODE_STYLE.md  CONTRIBUTING.md  CONTRIBUTION_TIERS.md  DEVNET_STABILITY_REPORT.md  DEV_ONBOARDING.md  INDEX.md  PHASE_1_CHECKLIST.md  PHASE_1_COMPLETE.md  PHASE_2_PLAN.md  README.md  RFC_PROCESS.md  VISION_v1.md  architecture_master_overview.md  architecture_overview.md  block_structure.md  block_validation_pipeline.md  cli_config.md  cli_overview.md  competitive_analysis.md  compute_engine_overview.md  consensus_integrity_checks.md  consensus_master_overview.md  consensus_validation.md  consensus_validation_summary.md  contributor_compensation.md  developer_introduction.md  developer_workflow.md  faq.md  final_doc_index.md  full_node_setup.md  full_system_overview.md  getting_started.md  glossary.md  mathematical_foundations.md  mbongo_whitepaper.md  (+32 more)
docs/architecture/: phase1_architecture.md  storage_invariants.md
docs/github/: pull_request_template.md
docs/rfcs/: 0001-template.md
docs/specs/: COMPUTE_INTERFACE_v0.1.md  PROTOCOL_DEFINITION_v0.1.md  PROTOCOL_LOCK_v0.2.md  RECEIPT_SPEC_v0.1.md  jsonrpc_v0.1.md  rpc_v0.1.md
mbongo-explorer/: .env.example  package-lock.json  package.json
mbongo-explorer/app/: globals.css  layout.tsx  page.tsx
mbongo-explorer/app/block/[height]/: page.tsx  raw-json.tsx
mbongo-explorer/lib/: rpc.ts
mbongo-explorer/types/: block.ts
scripts/: devnet_test.ps1  replay_test.ps1
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: client.ts  types.ts
spec/: README.md
spec/modules/: README.md  compute_marketplace.md
src/: e2e-tests.js  nodeOrchestrator.js
website/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
website/app/: constants.ts  globals.css  layout.tsx  page.tsx
website/app/bounties/: page.tsx
website/app/contribute/: page.tsx
website/app/docs/: page.tsx
website/app/roadmap/: page.tsx
website/components/: Footer.tsx  Header.tsx  ThemeProvider.tsx  ThemeToggle.tsx
