[workspace]
resolver = "2"

members = [
    "crates/mbongo-core",
    "crates/mbongo-consensus",
    "crates/mbongo-verification",
    "crates/mbongo-compute",
    "crates/mbongo-network",
    "crates/mbongo-runtime",
    "crates/mbongo-api",
    "crates/mbongo-wallet",
    "crates/mbongo-node",
]

[workspace.package]
version = "0.1.0"
authors = ["Mbongo Chain Contributors"]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/mbongo-chain/mbongo-chain"
homepage = "https://mbongochain.com"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ed25519-dalek = "2.1"
blake3 = "1.5"
sha2 = "0.10"

# Networking
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "mdns"] }

# Storage
rocksdb = "0.22"

# WASM runtime
wasmtime = "16.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Testing
criterion = "0.5"

# CLI
clap = { version = "4.4", features = ["derive"] }

# HTTP/REST
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Utilities
hex = "0.4"
bs58 = "0.5"
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
