[package]
name = "mbongo-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

description = "WebAssembly smart contract runtime for Mbongo Chain"

[dependencies]
# Internal dependencies
mbongo-core = { path = "../mbongo-core" }

# WASM runtime
wasmtime = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
env_logger = { workspace = true }
