[package]
name = "mbongo-verification"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

description = "Multi-layer compute verification for Mbongo Chain"

[dependencies]
# Internal dependencies
mbongo-core = { path = "../mbongo-core" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Cryptography
blake3 = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
env_logger = { workspace = true }
